--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-        <div id="servicesGrid" class="grid" style="margin-top: 16px"></div>
+        <div id="servicesGrid" class="services-grid"></div>
         <div
           id="servicesFallback"
           class="hintSmall"
