--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
 
       <!-- HERO -->
-      <section class="heroBanner hero-main">
+      <section class="heroBanner hero-main" style="background: transparent; border: none; box-shadow: none; backdrop-filter: none;">
         <div class="hero-grid">
           <div>
             <h1 class="glow-text" style="margin:0; font-family:'Playfair Display',serif; font-weight:900; font-size:clamp(40px,5vw,70px); line-height:1.02;">
@@ -28,7 +28,7 @@
             </h1>
 
             <p class="subtitle" style="margin:14px 0 0; font-size:18px; line-height:1.6;">
-              Soy Magdalena — te ayudo a descubrir que el polaco puede ser ligero, agradable y realmente <b>alcanzable</b>.
+              Soy Magdalena — profesora de español y polaco en Let's Talk Poznań. Te ayudo a descubrir que el polaco no es tan dificil como parece, que puede ser ligero, agradable y realmente "alcanzable" 🌸
             </p>
 
             <div style="margin-top:16px; display:flex; gap:12px; flex-wrap:wrap;">
@@ -45,22 +45,29 @@
           </div>
 
           <div style="display:flex; justify-content:center;">
-            <div class="card" style="padding:18px; width:min(420px,100%);">
-              <div style="display:flex; justify-content:space-between; align-items:center;">
-                <div style="font-weight:900;">☕ AquiVivo</div>
-                <span class="pill pill-yellow">Nuevo</span>
+            <div style="width:min(420px,100%);">
+
+
+              <div style="margin-top:12px; display:flex; justify-content:center;">
+                <div class="coffee-hero-wrap">
+                  <img src="assets/img/coffee.png" alt="Café" class="coffee-hero" />
+                  <span class="coffee-steam coffee-steam--left"></span>
+                  <span class="coffee-steam coffee-steam--mid"></span>
+                  <span class="coffee-steam coffee-steam--right"></span>
+                  <span class="coffee-heart"></span>
+                </div>
               </div>
 
               <div style="margin-top:12px; display:grid; grid-template-columns:repeat(3,1fr); gap:10px;">
-                <div class="card" style="padding:14px; text-align:center;">
+                <div class="card statCard" style="padding:14px; text-align:center;">
                   <div style="font-weight:900; font-size:34px; color:var(--yellow);">100+</div>
                   <div class="muted">Estudiantes</div>
                 </div>
-                <div class="card" style="padding:14px; text-align:center;">
+                <div class="card statCard" style="padding:14px; text-align:center;">
                   <div style="font-weight:900; font-size:34px; color:var(--pastel-blue);">10</div>
                   <div class="muted">años</div>
                 </div>
-                <div class="card" style="padding:14px; text-align:center;">
+                <div class="card statCard" style="padding:14px; text-align:center;">
                   <div style="font-weight:900; font-size:34px; color:var(--red);">4.9★</div>
                   <div class="muted">valoración</div>
                 </div>
