--- a/services.html
+++ b/services.html
@@ -31,7 +31,26 @@
           </div>
         </div>
 
-        <div id="servicesGrid" class="services-grid"></div>
+        <section id="planes" class="services-section">
+          <h2 class="sectionTitle" style="margin-top: 0">📌 Planes</h2>
+          <div id="servicesPlansGrid" class="services-grid"></div>
+        </section>
+
+        <section id="servicios" class="services-section">
+          <h2 class="sectionTitle" style="margin-top: 0">🧩 Servicios</h2>
+          <div id="servicesServicesGrid" class="services-grid"></div>
+        </section>
+
+        <section id="extras" class="services-section">
+          <h2 class="sectionTitle" style="margin-top: 0">✨ Extras</h2>
+          <div id="servicesExtrasGrid" class="services-grid"></div>
+        </section>
+
+        <section id="ebooks" class="services-section">
+          <h2 class="sectionTitle" style="margin-top: 0">📚 Ebooks</h2>
+          <div id="servicesEbooksGrid" class="services-grid"></div>
+        </section>
+
         <div
           id="servicesFallback"
           class="hintSmall"
