--- a/esadmin.html
+++ b/esadmin.html
@@ -44,7 +44,7 @@
           </div>
         </section>
         <!-- ✅ Dashboard (accordion – open by default) -->
-        <details class="card" id="accDashboard" open="">
+        <details class="card" id="accDashboard">
           <summary
             class="sectionTitle"
             style="cursor: pointer; list-style: none"
@@ -408,7 +408,7 @@
             <div class="list" id="promoListAdmin"></div>
           </div>
         </details>
-        <details class="card" id="accServices" open="">
+        <details class="card" id="accServices">
           <summary class="sectionTitle">
             🛍️ Servicios (oferta)
             <span class="hintSmall" style="font-weight: 600; margin-left: 8px"
@@ -441,6 +441,7 @@
                 <label class="muted" style="font-weight: 900">Categoría</label>
                 <select class="select" id="svcCategory">
                   <option value="plans">planes</option>
+                  <option value="consultas">consultas</option>
                   <option value="servicios">servicios</option>
                   <option value="extras" selected="">extras</option>
                   <option value="ebooks">ebooks</option>
