--- a/espanel.html
+++ b/espanel.html
@@ -22,11 +22,11 @@
             <div class="heroTitleRow">
               <div class="heroIcon">🎓</div>
               <div>
-                <h1 class="glow-text" style="margin: 0; font-size: 44px">
-                  Panel del estudiante
+                <h1 class="glow-text" id="panelTitle" style="margin: 0; font-size: 44px">
+                  ¡Buenas!
                 </h1>
-                <div class="muted" style="margin-top: 6px">
-                  Tu acceso, progreso y cursos disponibles.
+                <div class="muted" id="panelSubtitle" style="margin-top: 6px">
+                  Aqui tienes tu libreta! ¡Que chimba verte!
                 </div>
               </div>
             </div>
