--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div style="margin-top:16px; display:flex; gap:12px; flex-wrap:wrap;">
               <a class="btn-yellow" href="login.html">Reserva tu Clase Gratis</a>
-              <a class="btn-white-outline" href="#cursos">Ver Servicios</a>
+              <a class="btn-white-outline" id="btnCursos" href="#cursos">Ver Servicios</a>
               <a class="btn" href="espanel.html">Ir al Panel</a>
             </div>
 
@@ -109,7 +109,7 @@
     <div class="container">
 
       <!-- CURSOS -->
-<div class="card" style="margin-top:18px;">
+    <div id="cursos" class="card" style="margin-top:18px;">
         <div class="sectionTitle" style="margin-top:0;">📌 Empieza ahora</div>
         <div class="hintSmall">Entra al <b>Panel</b> para activar tu acceso (código o plan) y abrir tu nivel.</div>
       </div>
