--- a/esadmin.html
+++ b/esadmin.html
@@ -616,6 +616,14 @@
               UID
             </div>
             <div class="hintSmall" id="um_uid">—</div>
+            <div class="muted" style="font-weight: 900; margin-top: 12px">
+              Género
+            </div>
+            <select class="select" id="um_gender">
+              <option value="">—</option>
+              <option value="Papi">Papi</option>
+              <option value="Mami">Mami</option>
+            </select>
             <div
               class="metaRow"
               style="margin-top: 14px; flex-wrap: wrap; gap: 10px"
