--- a/esadmin.html
+++ b/esadmin.html
@@ -621,8 +621,8 @@
             </div>
             <select class="select" id="um_gender">
               <option value="">—</option>
-              <option value="Papi">Papi</option>
-              <option value="Mami">Mami</option>
+              <option value="papi">Papi</option>
+              <option value="mami">Mami</option>
             </select>
             <div
               class="metaRow"
