--- a/espanel.html
+++ b/espanel.html
@@ -78,10 +78,10 @@
           <div class="referralSide">
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
             <div class="sectionTitle" style="margin-top: 0">
-              🤝 Mi código de recomendación
+              🎁 Tengo código de un pana 😎
             </div>
             <div class="muted">
-              Compártelo con tus amigos. Cuando lo usen, recibirás una recompensa.
+              Compártelo con tus panas. Si lo usan, tú ganas algo también 😉
             </div>
 
             <div
@@ -108,7 +108,7 @@
             <div class="hr"></div>
 
             <details class="refDetails">
-              <summary>🎁 Tengo un código de un amigo</summary>
+              <summary>🎁 Tengo código de un pana 😎</summary>
               <div class="muted">Escribe el código para asociarlo a tu cuenta.</div>
               <div
                 class="metaRow"
@@ -135,7 +135,7 @@
             <div class="hr"></div>
 
             <details class="refDetails">
-              <summary>📈 Estadísticas de recomendaciones</summary>
+              <summary>📈 Cómo van mis códigos</summary>
               <div
                 class="metaRow"
                 style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
@@ -154,8 +154,8 @@
             </details>
             </div>
             <div class="card promo-mini" id="promoMini">
-              <div class="promo-mini-title">20% para ti</div>
-              <div class="promo-mini-sub">10% para tu amigo</div>
+              <div class="promo-mini-title">💛 Tú ganas 20%</div>
+              <div class="promo-mini-sub">🤝 Tu amigo 10%</div>
             </div>
           </div>
           </div>
